<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>io.github.yetyman</groupId>
        <artifactId>OpenGLFFM</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    
    <artifactId>vulkan-bindings</artifactId>
    <packaging>jar</packaging>
    
    <name>vulkan-bindings</name>
    <description>Auto-generated Vulkan FFM bindings</description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>